<resources>
    <string name="app_name">TBC_Course_22</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="fill_all">Please fill all fields</string>
    <string name="log_in">Log In</string>
    <string name="welcome">\"Welcome \"</string>
</resources>